k8s/order-service.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: order
  namespace: ms 
spec:
  replicas: 2
  selector:
    matchLabels:
      project: ms
      app: order
  template:
    metadata:
      labels:
        project: ms 
        app: order
    spec:
      #构建初始化镜像(通过初始化镜像的方式集成SkyWalking Agent)
      imagePullSecrets:
      - name: registry-pull-secret
      containers:
      - name: order
        image: harbor.husx.top/microservice/order-service:dev-1.0.3
        imagePullPolicy: Always
        ports:
          - protocol: TCP
            containerPort: 8020 
        volumeMounts:
          - mountPath: /usr/skywalking/agent
            name: sw-agent
        resources:
          requests:
            cpu: 0.1
            memory: 512Mi
          limits:
            cpu: 0.5
            memory: 800Mi
        # readinessProbe:
        #   tcpSocket:
        #     port: 8020
        #   initialDelaySeconds: 120
        #   periodSeconds: 20
        livenessProbe:
          tcpSocket:
            port: 8020
          initialDelaySeconds: 120
          periodSeconds: 10
      volumes:
        - name: sw-agent
          emptyDir: { }
