k8s/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  labels:
    app: mysql
spec:
  type: NodePort
  selector:
    app: mysql
  ports:
    - protocol : TCP
      nodePort: 30306
      port: 3306
      targetPort: 3306
