k8s/stock-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: stock
  namespace: ms
spec:
  ports:
  - port: 9999 
    name: stock
  selector:
    project: ms
    app: stock
---
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: stock
  namespace: ms 
spec:
  replicas: 2
  selector:
    matchLabels:
      project: ms
      app: stock
  template:
    metadata:
      labels:
        project: ms 
        app: stock
    spec:
      imagePullSecrets:
      - name: registry-pull-secret
      containers:
      - name: stock
        image: harbor.husx.top/microservice/stock-service:dev-1.0.3
        imagePullPolicy: Always
        ports:
          - protocol: TCP
            containerPort: 8030
        resources:
          requests:
            cpu: 0.1
            memory: 256Mi
          limits:
            cpu: 0.3
            memory: 512Mi
        # readinessProbe:
        #   tcpSocket:
        #     port: 8030
        #   initialDelaySeconds: 120
        #   periodSeconds: 20
        livenessProbe:
          tcpSocket:
            port: 8030
          initialDelaySeconds: 60
          periodSeconds: 10
