k8s/eureka-service.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: eureka 
  namespace: ms 
spec:
  rules:
    - host: eureka.ctnrs.com 
      http:
        paths:
        - path: /
          backend:
            serviceName: eureka 
            servicePort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: eureka
  namespace: ms
spec:
  clusterIP: None
  ports:
  - port: 8888
    name: eureka 
  selector:
    project: ms
    app: eureka

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: eureka
  namespace: ms 
spec:
  replicas: 3
  selector:
    matchLabels:
      project: ms
      app: eureka
  serviceName: "eureka"
  template:
    metadata:
      labels:
        project: ms 
        app: eureka
    spec:
      imagePullSecrets:
      - name: registry-pull-secret
      containers:
      - name: eureka
        image: harbor.husx.top/microservice/eureka-service:dev-1.0.1
        imagePullPolicy: Always
        ports:
          - protocol: TCP
            containerPort: 8888
        resources:
          requests:
            cpu: 0.1
            memory: 256Mi
          limits:
            cpu: 0.3
            memory: 512Gi
        # readinessProbe:
        #   tcpSocket:
        #     port: 8888
        #   initialDelaySeconds: 120
        #   periodSeconds: 20
        livenessProbe:
          tcpSocket:
            port: 8888
          initialDelaySeconds: 60
          periodSeconds: 10
