k8s/gateway-service.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway 
  namespace: ms 
spec:
  rules:
    - host: gateway.ctnrs.com 
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            serviceName: gateway
            servicePort: 9999
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: ms
spec:
  ports:
  - port: 9999 
    name: gateway
  selector:
    project: ms
    app: gateway
---
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: gateway
  namespace: ms 
spec:
  replicas: 2
  selector:
    matchLabels:
      project: ms
      app: gateway
  template:
    metadata:
      labels:
        project: ms 
        app: gateway
    spec:
      imagePullSecrets:
      - name: registry-pull-secret
      containers:
      - name: gateway
        image: harbor.husx.top/microservice/gateway-service:dev-1.0.1
        imagePullPolicy: Always
        ports:
          - protocol: TCP
            containerPort: 9999 
        resources:
          requests:
            cpu: 0.1
            memory: 256Mi
          limits:
            cpu: 0.3
            memory: 512Mi
        readinessProbe:
          tcpSocket:
            port: 9999
          initialDelaySeconds: 120
          periodSeconds: 20
        livenessProbe:
          tcpSocket:
            port: 9999
          initialDelaySeconds: 120
          periodSeconds: 20
